--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,8 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/index.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "static/**",
-      "use": "@vercel/static"
-    }
-  ],
   "routes": [
-    {
-      "src": "/(analyze|history|delete/.*)",
-      "dest": "/api/index.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/static/$1"
-    }
+    { "src": "^/$", "dest": "/static/index.html" },
+    { "src": "^/analyze$", "dest": "/api/index.py" },
+    { "src": "^/history$", "dest": "/api/index.py" },
+    { "src": "^/delete/(.*)", "dest": "/api/index.py" }
   ]
 }
