--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
+  "version": 2,
   "routes": [
     { "src": "^/$", "dest": "/static/index.html" },
+    { "src": "^/static/(.*)", "dest": "/static/$1" },
     { "src": "^/analyze$", "dest": "/api/index.py" },
     { "src": "^/history$", "dest": "/api/index.py" },
     { "src": "^/delete/(.*)", "dest": "/api/index.py" }
