--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "version": 2,
+  "builds": [
+    { "src": "api/index.py", "use": "@vercel/python" },
+    { "src": "static/**", "use": "@vercel/static" }
+  ],
   "routes": [
     { "src": "^/$", "dest": "/static/index.html" },
     { "src": "^/static/(.*)", "dest": "/static/$1" },
