--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,10 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "api/index.py", "use": "@vercel/python" },
-    { "src": "static/index.html", "use": "@vercel/static" }
-  ],
   "routes": [
     { "src": "^/$", "dest": "/static/index.html" },
-    { "src": "^/static/(.*)", "dest": "/static/$1" },
     { "src": "^/analyze$", "dest": "/api/index.py" },
     { "src": "^/history$", "dest": "/api/index.py" },
-    { "src": "^/delete/(.*)", "dest": "/api/index.py" }
+    { "src": "^/delete/(.*)", "dest": "/api/index.py" },
+    { "src": "^/static/(.*)", "dest": "/static/$1" }
   ]
 }
